CFG.txt
S    -> if ( BEXP ) { code } ELSE 
ELSE    -> else { code } || e
BEXP -> EP comp EP || true || false
code -> S code || EXP code || e 
EP   -> var CONT
CONT -> op EP || e
EXP  -> type vari = EP ;
comp -> == || != || <= || >= || < || >
type -> int || float || double || char || string || e
op   -> + || - || * || / || | || & || ^ || %
var  -> Identifier || Integer_literal || String_Literal || Float_Literal
vari -> Identifier
